--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h2 class="text-primary text-center mb-5">
                         Prognoză pe 5 zile
                     </h2>
-                    <div class="weather-forecast"></div>
+                    <div class="weather-forecast d-flex flex-wrap"></div>
                 </div>
             </section>
         </main>
@@ -132,10 +132,11 @@
         <script src="./api/endpoints.js"></script>
         <script src="./utils/date.js"></script>
         <script src="./utils/weather.js"></script>
-        <script src="./utils/window.js"></script>
         <!-- Sections -->
+        <script src="./sections/ScrollToTop.js"></script>
         <script src="./sections/CurrentWeather.js"></script>
         <script src="./sections/ChangeCity.js"></script>
+        <script src="./sections/WeatherForecast.js"></script>
         <!-- Main JS -->
         <script src="./index.js"></script>
     </body>
