automate selecting DOM element and event for it

--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
                             aria-labelledby="dropdownMenuButton1"
                         >
                             <li>
-                                <button class="dropdown-item bucharest">
+                                <button class="dropdown-item city">
                                     București
                                 </button>
                             </li>
                             <li>
-                                <button class="dropdown-item timisoara">
+                                <button class="dropdown-item city">
                                     Timișoara
                                 </button>
                             </li>
                             <li>
-                                <button class="dropdown-item oradea">
+                                <button class="dropdown-item city">
                                     Oradea
                                 </button>
                             </li>
                             <li>
-                                <button class="dropdown-item arad">Arad</button>
+                                <button class="dropdown-item city">Arad</button>
                             </li>
                             <li>
-                                <button class="dropdown-item sibiu">
+                                <button class="dropdown-item city">
                                     Sibiu
                                 </button>
                             </li>
