add more cities & update html code

--- a/index.html
+++ b/index.html
@@ -62,33 +62,9 @@
                             Alege un alt oraș
                         </button>
                         <ul
-                            class="dropdown-menu"
+                            class="dropdown-menu city-list"
                             aria-labelledby="dropdownMenuButton1"
-                        >
-                            <li>
-                                <button class="dropdown-item city">
-                                    București
-                                </button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item city">
-                                    Timișoara
-                                </button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item city">
-                                    Oradea
-                                </button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item city">Arad</button>
-                            </li>
-                            <li>
-                                <button class="dropdown-item city">
-                                    Sibiu
-                                </button>
-                            </li>
-                        </ul>
+                        ></ul>
                     </div>
                 </div>
             </section>
@@ -132,6 +108,7 @@
         <script src="./api/endpoints.js"></script>
         <script src="./utils/date.js"></script>
         <script src="./utils/weather.js"></script>
+        <script src="./utils/cities.js"></script>
         <!-- Sections -->
         <script src="./sections/ScrollToTop.js"></script>
         <script src="./sections/CurrentWeather.js"></script>
